added extra pages

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 <body>
   <img src=".git/images/apple picking.jpg" alt="Josh's Profile Piture">
   <h1>Josh Lambright</h1>
-    <p><em>Relationship Manager</em></p>
-    <br>
-    <p>I currently work in the banking industry, but I am aspiring to become a web developer. I have a wife and two kids</p>
-    <hr>
-    <h3>Education:
-      <ul>
-        <li>USC Upstate - 2008 Bachelors in Business Management</li>
-        <li>SCSL - 2011 Certificate in Leadership</li>
-      </ul>
-    </h3>
-    <h3>
-      <a href="hobbies.html">My Hobbies</a>
-    </h3>
+  <p><em>Relationship Manager</em></p>
+  <br>
+  <p>I currently work in the banking industry, but I am aspiring to become a web developer. I have a wife and two kids</p>
+  <hr>
+  <h3>Education:
+    <ul>
+      <li>USC Upstate - 2008 Bachelors in Business Management</li>
+      <li>SCSL - 2011 Certificate in Leadership</li>
+    </ul>
+  </h3>
+  <h3>
+    <a href="hobbies.html">My Hobbies</a><br>
+    <a href="contact.html">Contact Info</a>
+  </h3>
 </body>
 
 </html>
