--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
   <h1>Contact info</h1>
   <br>
   <h2>Cell:</h2>
-  <h4>803-542-1156</h4><br>
+  <h4>888-444-3333</h4><br>
   <h2>Email:</h2>
-  <h4>josh.lambright@gmail.com</h4>
+  <h4>myemail@gmail.com</h4>
 </body>
 
 </html>
