--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
 </head>
 
 <body>
-  <img src=".git/images/apple picking.jpg" alt="Josh's Profile Piture">
-  <h1>Josh Lambright</h1>
-  <p><em>Relationship Manager</em></p>
-  <br>
-  <p>I currently work in the banking industry, but I am aspiring to become a web developer. I have a wife and two kids</p>
+  <table cellspacing="20">
+    <tr>
+      <td><img src=".git/images/apple picking.jpg" height="275" width="200" alt="Josh's Profile Piture">
+      </td>
+      <td>
+        <h1>Josh Lambright</h1>
+        <p><em>Relationship Manager</em></p>
+        <br>
+        <p>I currently work in the banking industry, but I am aspiring to become a web developer. I have a wife and two kids</p>
+      </td>
+    </tr>
+  </table>
+
   <hr>
   <h3>Education:
     <ul>
@@ -19,6 +27,22 @@
       <li>SCSL - 2011 Certificate in Leadership</li>
     </ul>
   </h3>
+  <h3>Work History</h3>
+  <table>
+    <th>Year</th>
+    <th>Work</th>
+    <th>Position</th>
+    <tr>
+      <td>2015-2018</td>
+      <td>Verizon</td>
+      <td>Solution Specialist</td>
+    </tr>
+    <tr>
+      <td>2018-Present</td>
+      <td>Bank of America</td>
+      <td>Relationship Manager</td>
+    </tr>
+  </table>
   <h3>
     <a href="hobbies.html">My Hobbies</a><br>
     <a href="contact.html">Contact Info</a>
