--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,14 @@
   <h2>Email:</h2>
   <h4>myemail@gmail.com</h4>
 </body>
-
+<hr>
+<form action="index.html">
+  <label>Your Name: </label>
+  <input type="text"><br>
+  <label>Your Email: </label>
+  <input type="email"><br>
+  <label>Your Message</label><br>
+  <textarea name="" id="" cols="30" rows="10"></textarea>
+  <input type="submit">
+</form>
 </html>
