--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
       <li>SCSL - 2011 Certificate in Leadership</li>
     </ul>
   </h3>
-  <h3>Work History</h3>
-  <table>
+  <hr>
+  <h3>Work History:</h3>
+  <table cellspacing="10">
     <th>Year</th>
     <th>Work</th>
     <th>Position</th>
@@ -43,6 +44,19 @@
       <td>Relationship Manager</td>
     </tr>
   </table>
+  <hr>
+  <h3>Skills:</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>Html</td>
+      <td>👍👍👍</td>
+    </tr>
+    <tr>
+      <td>Interpersonal / Sales </td>
+      <td>👍👍👍👍👍</td>
+    </tr>
+  </table>
+  <hr>
   <h3>
     <a href="hobbies.html">My Hobbies</a><br>
     <a href="contact.html">Contact Info</a>
