--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Josh's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #b0c4de; ">
   <table cellspacing="20">
     <tr>
       <td><img src="images/apple picking.jpg" height="275" width="200" alt="Josh's Profile Piture">
