--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Josh's Personal Site</title>
+  <style>
+    body {
+      background-color: #add8e6;
+    }
+
+    hr {}
+  </style>
 </head>
 
-<body style="background-color: #add8e6; ">
+<body>
   <table cellspacing="20">
     <tr>
       <td><img src="images/apple picking.jpg" height="275" width="200" alt="Josh's Profile Piture">
