--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
       background-color: #add8e6;
     }
 
-    hr {}
+    hr {
+      border-style: dotted none none;
+      border-color: grey;
+      border-width: 5px;
+      width: 5%;
+    }
   </style>
 </head>
 
