linked everything together

--- a/index.html
+++ b/index.html
@@ -4,18 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Josh's Personal Site</title>
-  <style>
-    body {
-      background-color: #add8e6;
-    }
+  <link rel="stylesheet" href="css/styles.css">
 
-    hr {
-      border-style: dotted none none;
-      border-color: grey;
-      border-width: 5px;
-      width: 5%;
-    }
-  </style>
 </head>
 
 <body>
@@ -33,7 +23,7 @@
   </table>
 
   <hr>
-  <h3>Education:
+  <h3>Education:</h3>
     <ul>
       <li>USC Upstate - 2008 Bachelors in Business Management</li>
       <li>SCSL - 2011 Certificate in Leadership</li>
