--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/apple picking.jpg" height="275" width="200" alt="Josh's Profile Piture">
+      <td><img class="circular"src="images/apple picking.jpg" height="275" width="200" alt="Josh's Profile Piture">
       </td>
       <td>
         <h1>Josh Lambright</h1>
