--- a/css my site/index.html
+++ b/css my site/index.html
@@ -4,8 +4,19 @@
     <meta charset="utf-8">
     <title>Josh's Site</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
+    <div class="top-container">
+      <h1>I'm Josh</h1>
+      <p>I am a web devoloper</p>
+    </div>
+    <div class="middle-container">
+
+    </div>
+    <div class="bottom-container">
+
+    </div>
 
   </body>
 </html>
