--- a/css my site/index.html
+++ b/css my site/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <div class="top-container">
+      <img src="images/cloud.png" alt="cloud image">
       <h1>I'm Josh</h1>
       <p>I am a web devoloper</p>
+      <img src="images/cloud.png" alt="cloud image">
+      <img src="images/mountain.png" alt="mountain image">
     </div>
     <div class="middle-container">
 
