--- a/css my site/index.html
+++ b/css my site/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="top-container">
       <img class="topcloud" src="images/cloud.png" alt="cloud image">
-      <h1>I'm Josh</h1>
-      <p>I am a web devoloper</p>
+      <h1>I'm Josh.</h1>
+      <h2>a <span>pro</span>grammer.</h2>
       <img class="bottomcloud" src="images/cloud.png" alt="cloud image">
       <img src="images/mountain.png" alt="mountain image">
     </div>
