--- a/css my site/index.html
+++ b/css my site/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Josh's Site</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">">
-  </head>
-  <body>
-    <div class="top-container">
-      <img class="topcloud" src="images/cloud.png" alt="cloud image">
-      <h1>I'm Josh.</h1>
-      <h2>a <span>pro</span>grammer.</h2>
-      <img class="bottomcloud" src="images/cloud.png" alt="cloud image">
-      <img src="images/mountain.png" alt="mountain image">
+
+<head>
+  <meta charset="utf-8">
+  <title>Josh's Site</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">">
+</head>
+
+<body>
+  <div class="top-container">
+    <img class="topcloud" src="images/cloud.png" alt="cloud image">
+    <h1>I'm Josh.</h1>
+    <h2>a <span>pro</span>grammer.</h2>
+    <img class="bottomcloud" src="images/cloud.png" alt="cloud image">
+    <img src="images/mountain.png" alt="mountain image">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="apple picking.jpg" height="150px" width="125px" alt="Josh's Profile Pic">
+      <h2>Hello.</h2>
+      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
-    <div class="middle-container">
-      <div class="profile">
-        <img src="apple picking.jpg" height="150px" width="125px"alt="Josh's Profile Pic">
-        <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="snowboard-img" src="images/col2008.jpg" alt="snowboarding">
+        <h3>Snowboarding</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
-      <hr>
-      <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="" src="" alt="">
-          <h3>Snowboarding</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-        </div>
-        <div class="skill-row">
-          <img class="" src="https://thumbs.dreamstime.com/b/top-mountain-extreme-snowboarding-slide-13098838.jpg" width="200px" height="150" alt="snowboarding">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-        </div>
-      </div>
-      <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="josh.lambright@gmail.com">CONTACT ME</a>
+      <div class="skill-row">
+        <img class="musicpic" src="images/si2010.jpg"alt="music pic">
+        <h3>Music</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
     </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="josh.lambright@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
 
 
-    <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/josh-lambright-4b63861b3/">LinkedIn</a>
-      <a class="footer-link" href="file:///C:/Users/joshl/github/Web-Development-Class/css%20my%20site/index.html">Website</a>
-      <p>© 2020 Josh Lambright.</p>
-    </div>
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/josh-lambright-4b63861b3/">LinkedIn</a>
+    <a class="footer-link" href="file:///C:/Users/joshl/github/Web-Development-Class/css%20my%20site/index.html">Website</a>
+    <p>© 2020 Josh Lambright.</p>
+  </div>
 
 </html>
