--- a/css my site/index.html
+++ b/css my site/index.html
@@ -19,9 +19,9 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="apple picking.jpg" height="150px" width="125px" alt="Josh's Profile Pic">
+      <img class="profilepic" src="apple picking.jpg" alt="Josh's Profile Pic">
       <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p> <div class="biocontent"> I work in the banking industry and I am excited about taking on the new challenge of web development. I have a wife and two kids and love spending time with them.</div></p>
     </div>
     <hr>
     <div class="skills">
@@ -29,19 +29,19 @@
       <div class="skill-row">
         <img class="snowboard-img" src="images/col2008.jpg" alt="snowboarding">
         <h3>Snowboarding</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <p>I am no Shawn White. I love going down the slopes and hitting jumps. However, I know my limits and have no desire to learn crazy tricks, because I want to sleep in my own bed that night.</p>
       </div>
       <div class="skill-row">
         <img class="musicpic" src="images/si2010.jpg"alt="music pic">
         <h3>Music</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p>I LOVE music!  My main instrument is guitar and I have been known to dabble with other instruments such as piano or bass. I have played at a local church 20 years.</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>Do you like to shred?</h3>
+      <p>If you like shredding slopes or if you like to shred guitar licks, I would love to hear from you and talk about it!</p>
       <a class="btn" href="josh.lambright@gmail.com">CONTACT ME</a>
     </div>
   </div>
