--- a/css my site/index.html
+++ b/css my site/index.html
@@ -23,7 +23,7 @@
       <h2>Hello.</h2>
       <p> <div class="biocontent"> I work in the banking industry and I am excited about taking on the new challenge of web development. I have a wife and two kids and love spending time with them.</div></p>
     </div>
-    <hr>
+    <hr class="hr">
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
@@ -41,8 +41,8 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Do you like to shred?</h3>
-      <p>If you like shredding slopes or if you like to shred guitar licks, I would love to hear from you and talk about it!</p>
-      <a class="btn" href="josh.lambright@gmail.com">CONTACT ME</a>
+      <p class="shred">If you like shredding slopes or if you like to shred guitar licks, I would love to hear from you and talk about it!</p>
+      <a href="josh.lambright@gmail.com" class="btn">CONTACT ME</a>
     </div>
   </div>
 
@@ -50,7 +50,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/josh-lambright-4b63861b3/">LinkedIn</a>
     <a class="footer-link" href="file:///C:/Users/joshl/github/Web-Development-Class/css%20my%20site/index.html">Website</a>
-    <p>© 2020 Josh Lambright.</p>
+    <p><div class="copyright">© 2020 Josh Lambright.</div></p>
   </div>
 
 </html>
